.jar file added & readme update